--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ garbage/.vs/garbage/v15/.suo
 
 .gitignore
 .gitattributes
+2-3_tree/2-3_tree/Debug/main.obj.enc
+ConsoleApplication1/.vs/ConsoleApplication1/v15/.suo
+*.cpp
+*.h
